fix double scroll bar

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -47,6 +47,8 @@ body, html {
     height: 100%;
     line-height: 1.8;
     box-sizing:border-box;
+}
+body {
     overflow: auto;
     overflow-x: hidden;
 }
